--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-tools</artifactId>
+        </dependency>
+
         <!-- test data -->
         <dependency>
             <groupId>com.github.javafaker</groupId>
@@ -108,6 +113,17 @@
                     <release>11</release>
                 </configuration>
             </plugin>
+<!--            <plugin>-->
+<!--                <groupId>net.bytebuddy</groupId>-->
+<!--                <artifactId>byte-buddy-maven-plugin</artifactId>-->
+<!--                <configuration>-->
+<!--                    <transformations>-->
+<!--                        <transformation>-->
+<!--                            <plugin>reactor.tools.agent.ReactorDebugByteBuddyPlugin</plugin>-->
+<!--                        </transformation>-->
+<!--                    </transformations>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
         </plugins>
     </build>
 
